- impl openAPI specific exception body in usermanagementapi.yml - introduced builder pattern in dto (Mailing module) and fixed code in all modules accordingly - fixed bug in Exercise module (name normalization moved to entity) - moved common exceptions to GlobalExceptionHandler in app module - randomized test input data in every module